# assignment_control-pid

./: .gitignore  CMakeLists.txt  README.md  octave-script.m  plot.sh
app/scripts/: assignment_control-pid-app.xml  assignment_control-pid-system.xml
gazebo/models/assignment_control-pid-ball/: model.config  model.sdf
gazebo/worlds/: assignment_control-pid.sdf
smoke-test/: CMakeLists.txt  test.cpp  test.xml
smoke-test/fixtures/: fixture.xml
src/: controller.cpp  detector.cpp  mover.cpp  world.cpp
